@@ -42,13 +42,15 @@ Any::Moose                = 0.11
 autodie                   = 2.08
 Data::Section             = 0.100270
 File::CountLines          = 0.0.2
-Getopt::Long::Descriptive = 0.083
 IO::Interactive           = 0.0.6
 Module::Pluggable         = 3.9
 
+; Command.pm
+Getopt::Long::Descriptive = 0.083
+
 ; ReadLine.pm
 Term::ProgressBar         = 2.00
-Term::ReadLine::Gnu       = 0
+Term::ReadLine            = 0
 
 ; DBD.pm
 List::MoreUtils           = 0.22
