@@ -1,9 +1,12 @@
 use 5.010;
 use strict;
 use warnings;
-use Test::More tests => 1;
+use Test::More tests => 2;
 use Hailo::UI::ReadLine;
 
 my $readline = Hailo::UI::ReadLine->new;
+is($ENV{PERL_RL}, 'Perl o=0', "Using Term::ReadLine::Perl");
 
-is($ENV{PERL_RL}, 'Gnu', "Using Term::ReadLine::Gnu");
+$ENV{PERL_RL} = 'Mooo';
+my $readline2 = Hailo::UI::ReadLine->new;
+is($ENV{PERL_RL}, 'Mooo', "... unless the user picks something else");
